# cellcheck

./: README.md
back/cellcheck/: .gitignore  Jenkinsfile  build.gradle  settings.gradle
back/cellcheck/src/main/resources/: application-prod.yaml  application.yaml
cellcheck-fe/: Jenkinsfile  README.md  example.jsx  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
cellcheck-fe/src/: App.css  App.jsx  index.css  main.jsx
cellcheck-fe/src/api/: authApi.js  batteryApi.js  noticeApi.js  userApi.js
cellcheck-fe/src/components/admin/: AdminDashboardCharts.jsx  BatteryLogTable.jsx  NoticeCreateModal.jsx  UserManagement.jsx
cellcheck-fe/src/components/animations/: FadeAnimation.jsx
cellcheck-fe/src/components/auth/: AdminKeyModal.jsx  AdminSignupForm.jsx  AdminSignupModal.jsx  LoginForm.jsx  UserSignupForm.jsx  UserSignupModal.jsx
cellcheck-fe/src/components/common/: Button.jsx  ConnectionStatus.jsx  Input.jsx  Modal.jsx  NoticeDetailModal.jsx
cellcheck-fe/src/components/dashboard/: BasicCharts.jsx  BatteryDischargeCard.jsx  BatteryInspectionCard.jsx  BatteryLogTable.jsx  BatteryTypePie.jsx  CircuitStatusCard.jsx  DeviceMonitoringCard.jsx  DeviceStatus.jsx
cellcheck-fe/src/components/layout/: BackgroundPattern.jsx  Footer.jsx  Header.jsx
cellcheck-fe/src/context/: AuthContext.jsx  WebSocketContext.jsx
cellcheck-fe/src/data/: mockData.js
cellcheck-fe/src/hooks/: useAuth.js  useModal.js  useWebSocket.js
cellcheck-fe/src/pages/: AdminPage.jsx  BatteryMonitorPage.jsx  LoginPage.jsx  UserPage.jsx
cellcheck-fe/src/styles/: animations.css
cellcheck-fe/src/utils/: AxiosInstance.js  constants.js  helpers.js
cellcheck_ai/: .dockerignore  =2.12  Dockerfile  requirements.txt  run_server.py  socket_server.py
cellcheck_ai/abnormal_model/: abnormal_predict.py
cellcheck_ai/type_model/: type_predict.py
develop-em/: .gitignore
develop-em/Arduino_A/monitoring_arduino/: monitoring_arduino.ino
develop-em/Arduino_B/arduino_controller/: arduino_controller.ino
develop-em/ROS/ros2_ws/: install_ros2_dashing.sh
develop-em/ROS/ros2_ws/src/arduino_interface/: package.xml  setup.py
develop-em/ROS/ros2_ws/src/arduino_interface/arduino_interface/: arduino_controller_node.py
develop-em/ROS/ros2_ws/src/battery_system/: package.xml  setup.cfg  setup.py
develop-em/ROS/ros2_ws/src/battery_system/battery_system/: system_manager_node.py  zone_manager_node.py
develop-em/ROS/ros2_ws/src/battery_system/launch/: battery_inspection_system.launch.py
develop-em/ROS/ros2_ws/src/image_comm/: package.xml  setup.cfg  setup.py
develop-em/ROS/ros2_ws/src/jetson_ec2_mqtt_comm/: package.xml  setup.cfg  setup.py
develop-em/ROS/ros2_ws/src/jetson_ec2_mqtt_comm/config/: mqtt_bridge_params.yamlZone.Identifier
develop-em/ROS/ros2_ws/src/jetson_ec2_mqtt_comm/jetson_ec2_mqtt_comm/: battery_calc_node.py  mqtt_bridge_node.py  telemetry_node.py
develop-em/ROS/ros2_ws/src/jetson_ec2_mqtt_comm/launch/: telemetry_launch.py
develop-em/ROS/ros2_ws/src/jetson_ec2_mqtt_comm/resource/cert/: ca.crtZone.Identifier
develop-em/ROS/ros2_ws/src/robot_arm_control_cpp/: CMakeLists.txt  package.xml
develop-em/ROS/ros2_ws/src/robot_arm_control_cpp/include/robot_arm_control_cpp/: motor_functions.hpp
develop-em/ROS/ros2_ws/src/robot_arm_control_cpp/launch/: robot_arm_control.launch.py  robot_arm_control_test.launch.py
develop-em/ROS/ros2_ws/src/robot_arm_control_cpp/src/: motor_functions.cpp  motor_topic.cpp  robot_tf_pub.cpp
develop-em/ROS/ros2_ws/src/robot_arm_description/: package.xml  setup.cfg  setup.py
develop-em/ROS/ros2_ws/src/robot_arm_target/: package.xml  setup.cfg  setup.py
develop-em/ROS/ros2_ws/src/serial_comm/: package.xml  setup.py
develop-em/ROS/ros2_ws/src/test_package/: package.xml  setup.py
docs/: index.html
exec/: cellcheck_full_dump.sql  시연 시나리오.md  포팅매뉴얼.md
(+91 files in other folders)
